# ROS_finite_state_machine

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: cmake.yml  docker-publish.yml
casm_pddl_action/: CMakeLists.txt  package.xml
casm_pddl_action/speech_detection/pddl/: goal.pddl
casm_state_machine/: CMakeLists.txt
casm_state_machine/scripts/: functions_main.py  functions_state.py
casm_state_machine/scripts/navigation/: navigation_states.py
casm_state_machine_msgs/: CMakeLists.txt  package.xml
casm_state_machine_msgs/msgs/: Casm_Command.msg  Casm_Cube_Color.msg  Casm_Event.msg  Casm_Event_Update.msg  Casm_Fruits.msg  Casm_Object.msg  Casm_State.msg  Casm_State_Behavior.msg  Casm_State_Update.msg  Casm_Utensils.msg
casm_state_machine_msgs/srv/: CasmTransitionHistory.srv
examples/: state_machine_nesting.py
finite_state_machine/: CMakeLists.txt  package.xml
finite_state_machine/functionalities/: functions_main.py  header_imports.py
finite_state_machine/functionalities/computer_vision/: computer_vision_states_3D.py
finite_state_machine/functionalities/manipulation/: manipulation_states.py
finite_state_machine/functionalities/mimicking/: mimicking_states.py
finite_state_machine/functionalities/navigation/: navigation_states.py
finite_state_machine/functionalities/speech_detection/: speech_detection_states.py
finite_state_machine/functionalities/speech_display/: speech_display_states.py
finite_state_machine/functionalities/speech_output/: speech_output_states.py
functionalities/: functions_main.py
functionalities/computer_vision/: computer_vision_states.py
functionalities/manipulation/: manipulation_states.py
functionalities/mimicking/: mimicking_states.py
functionalities/navigation/: navigation_states.py
functionalities/speech_detection/: speech_detection_states.py
pddl_action/: CMakeLists.txt  package.xml
state_machine/: package.xml
state_machine/scripts/: header_imports.py
state_machine/scripts/computer_vision/: computer_vision_states_2D.py
state_machine_msgs/msgs/: Casm_StateMachine.msg
