<?xml version="1.0"?>
<package format="2">
  <name>finite_state_machine</name>
  <version>0.1.0</version>
  <description>This package containes numerous examples of how to use SMACH. See the examples directory </description>
  <author>Ronaldson Bellande</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/smach_tutorials</url>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export></export>

</package>
